feat: change theme

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Peer2Poll</title>
         <link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/sky.css">
         <link rel="stylesheet" href="plugin/highlight/monokai.css">
         <script src="dist/reveal.js"></script>
         <script src="plugin/notes/notes.js"></script>
@@ -38,13 +38,13 @@
 
         </div>
 
+        <div id="editor" class="column">
+		</div>
+
         <div class="reveal" id="reveal-container" class="column">
             <div class="slides" id="reveal-slides">
             </div>
         </div>
-        
-        <div id="editor" class="column">
-		</div>
         
 		<script type="text/javascript">view.render()</script>
 
