feat: improve style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="poll.js"></script>
 
     </head>
-	<body class="reveal-viewport">
+	<body>
         <div id="room"> 
             <div class="room_column">
                 Room id: <div id="room_id"></div>
