feat: improve flexbox display

--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
 
         </div>
 
-        <div id="editor">
-		</div>
-
-        <div id="reveal">
-            <div id="slides">
-            </div>
+        <div id="playground">
         </div>
+        
         
 		<script type="text/javascript">view.render()</script>
 
